--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "gloudemans/shoppingcart": "^2.3",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/socialite": "*",
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -50,6 +50,9 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
